# wasm-game-of-life

./: .firebaserc  .gitignore  Cargo.toml  LICENSE_MIT  README.md  firebase.json
.devcontainer/: devcontainer.json  install-dev-tools.sh
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
src/: lib.rs
tests/: web.rs
www/: canvas.js  fps.js  game-of-life-javascript.js  game-of-life-wasm.js  game-of-life.js  index.css  index.html  index.js  package-lock.json  package.json  ui.js  webpack.config.js
www/src/: benchmarks.js  canvas.js  colony-samples.js  fps.js  game-of-life-javascript.js  game-of-life-wasm.js  info.js  inputs.js  library.js  rle-panel.js  rle.js  throttle.js  ui.js  universe-factory.js
