[package]
name = "wasm-game-of-life"
description= "A project for comparing WebAssembly (Rust) to JavaScript"
repository = "https://github.com/olimungo/wasm-game-of-life"
license = "Apache-2.0"
version = "1.29.0"
authors = ["Olivier Mungo <olivier@mungo.eu>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3"
fixedbitset = "0.4.2"
web-sys = {version = "0.3", features = [
    "CanvasRenderingContext2d",
    "Document",
    "HtmlCanvasElement",
    "Window",
    "console",
]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[profile.dev]
opt-level = "s"